# GenOS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
bootloader/: Cargo.toml
bootloader/src/: elf.rs  main.rs
crates/abi/: Cargo.toml
crates/abi/src/: lib.rs
crates/abi/tests/: boot_info.rs  user_abi.rs
docs/: USERSPACE.md
kernel/: Cargo.toml  linker.ld
kernel/src/: arch.rs  elf.rs  input.rs  input_hw.rs  interrupts.rs  ipc.rs  lib.rs  main.rs  memory.rs  paging.rs  physmem.rs  ramfs.rs  rtc.rs  serial.rs  shell.rs  syscall.rs  tasks.rs  userspace.rs  vfs.rs
kernel/src/display/: framebuffer.rs  geometry.rs  manager.rs  mod.rs  shell_buffer.rs  stroke_font.rs  text.rs  theme.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
userspace/init/: Cargo.toml  build.rs  linker.ld
userspace/init/src/: main.rs
userspace/runtime/: Cargo.toml
userspace/runtime/src/: lib.rs
