[workspace]
members = [
    "crates/abi",
    "bootloader",
    "kernel",
    "userspace/runtime",
    "userspace/init",
    "tools/xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["GenOS"]

[workspace.dependencies]
genos_abi = { path = "crates/abi" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[profile.userspace]
inherits = "release"
panic = "abort"
lto = false
codegen-units = 1
